--- a/BibliotecaVirtual/BibliotecaVirtual.Api/appsettings.Development.json
+++ b/BibliotecaVirtual/BibliotecaVirtual.Api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "BibliotecaContexto": "Data Source=localhost,1433;Database=BibliotecaVirtual;User ID=biblioteca;Password=1q2w3e4r5t;"
   }
 }
